@@ -1,5 +1,8 @@
 2003-01-25  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/sp-use.c (sp_use_update): Implemented by MenTaLguY
+	(sp_use_modified): Ditto
+
 	* src/libnr/nr-path.c (nr_curve_bbox): Implement fast and exact bbox (thanks to Nathan)
 	(nr_curve_bbox_wind_distance): Use exact bbox
 
